--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="container">
         <h1>Welcome to Sentiment Analysis</h1>
         <p>Enter text for sentiment analysis:</p>
-        <form action="/app.py" method="post">
+        <form action="/predict_text" method="post">
             <textarea name="input_text" rows="4" cols="50"></textarea><br><br>
             <input type="submit" class="btn btn-primary" value="Predict Sentiment">
         </form>
